--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <header>
   <div class="container">
-    <h1>Amanda Psi Pessoa</h1>
+    <h1>Amanda Pessôa</h1>
     <p class="sub">Psicanálise clínica · atendimento online</p>
   </div>
 </header>
@@ -68,9 +68,9 @@
       Para agendar uma escuta inicial, entre em contato.
     </p>
 
-    <p class="insta">@amandaPsiPessoa</p>
+    <p class="insta">@amandapsipessoa</p>
 
-    <a class="button light" href="https://wa.me/55SEUNUMERO">Entrar em contato</a>
+    <a class="button light" href="https://wa.me/5521971013047">Entrar em contato</a>
   </div>
 </section>
 
