--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       O sofrimento aparece quando não há mais onde cair.<br>
       A análise começa aí.
     </p>
-    <a class="button" href="https://wa.me/55SEUNUMERO">Agendar escuta inicial</a>
+    <a class="button" href="https://wa.me/5521971013047">Agendar escuta inicial</a>
   </div>
 </section>
 
