--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 <body>
 
 <header>
+ <img src="foto.site.jpeg" alt="Foto de Amanda" class="foto-perfil">
+  
   <div class="container">
     <h1>Amanda Pessôa</h1>
     <p class="sub">Psicanálise clínica · atendimento online</p>
