--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 </section>
 
 <footer>
-  <p>©amandapsipessoa · Psicanálise Clínica</p>
+  <p>Amanda Pessôa · Psicanálise Clínica</p>
 </footer>
 
 </body>
