--- a/index.html
+++ b/index.html
@@ -61,6 +61,27 @@
     </ul>
   </div>
 </section>
+<section class="testimonial">
+  <h2>Relato de paciente</h2>
+
+  <blockquote>
+    <p>
+      “Oi, Amanda.<br><br>
+      Sou imensamente grata por ter conhecido você.
+      A terapia me ajudou a enxergar que o autoconhecimento dói,
+      mas ele também cura, é libertador e é bonito.<br><br>
+      As questões que eu tinha ontem comigo já não são mais as mesmas.
+      Consegui desbloquear muitas ‘gavetas’, me senti ouvida,
+      acolhida e não julgada.<br><br>
+      Obrigada por cada sessão e por me ajudar
+      no momento mais difícil que passei.”
+    </p>
+
+    <footer>
+      — Paciente I., 37 anos
+    </footer>
+  </blockquote>
+</section>  
 
 <section class="contact">
   <div class="container">
