--- a/index.html
+++ b/index.html
@@ -81,7 +81,21 @@
       — Paciente I., 37 anos
     </footer>
   </blockquote>
-</section>  
+</section>
+  <section class="depoimentos">
+  <h2>Depoimentos</h2>
+
+  <div class="depoimento">
+    <p class="texto">
+      “Comecei a terapia muito imatura, com feridas abertas e achando que já sabia o motivo de tudo.
+      Com o tempo, fui amadurecendo e me desconstruindo.
+      Hoje vejo as coisas com mais clareza e sigo em construção.
+      Obrigada, Amanda, por segurar minha mão nessa caminhada.”
+    </p>
+    <p class="autor">Paciente M., 44 anos</p>
+  </div>
+
+</section>
 
 <section class="contact">
   <div class="container">
