--- a/index.html
+++ b/index.html
@@ -82,20 +82,15 @@
     </footer>
   </blockquote>
 </section>
-  <section class="depoimentos">
-  <h2>Depoimentos</h2>
-
-  <div class="depoimento">
-    <p class="texto">
-      “Comecei a terapia muito imatura, com feridas abertas e achando que já sabia o motivo de tudo.
-      Com o tempo, fui amadurecendo e me desconstruindo.
-      Hoje vejo as coisas com mais clareza e sigo em construção.
-      Obrigada, Amanda, por segurar minha mão nessa caminhada.”
-    </p>
-    <p class="autor">Paciente M., 44 anos</p>
-  </div>
-
-</section>
+ <blockquote>
+  <p>
+    “Comecei a terapia muito imatura, com feridas abertas e achando que já sabia o motivo de tudo.<br><br>
+    Com o tempo, fui amadurecendo e me desconstruindo.<br><br>
+    Hoje vejo as coisas com mais clareza e sigo em construção.<br><br>
+    Obrigada, Amanda, por segurar minha mão nessa caminhada.”
+  </p>
+  <footer>— Paciente M., 44 anos</footer>
+</blockquote>
 
 <section class="contact">
   <div class="container">
