--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
   </div>
 </section>
 <section class="testimonial">
-  <h2>Relato de paciente</h2>
+  <h2>Relatos de pacientes</h2>
 
   <blockquote>
     <p>
