--- a/index.html
+++ b/index.html
@@ -91,6 +91,27 @@
   </p>
   <footer>— Paciente M., 44 anos</footer>
 </blockquote>
+  <blockquote>
+  <p>
+    Sempre tive muita dificuldade de falar o que sinto.
+    Através do acolhimento de uma escuta sem julgamentos,
+    consegui construir um vínculo de confiança com a Amanda.
+    A partir disso, passei a expressar livremente situações do meu cotidiano,
+    meus pensamentos sobre mim e o que sinto,
+    relacionando tudo à minha história desde a infância
+    até o momento atual, respeitando minhas particularidades.
+  </p>
+  <cite>Paciente J. — 33 anos</cite>
+</blockquote>
+  <blockquote>
+  <p>
+    Cheguei na terapia cansada de tanto repetir os mesmos problemas.
+    Com o tempo, fui entendendo de onde vinha tanta confusão dentro de mim.
+    Ainda estou em processo, mas hoje me escuto mais e me cobro menos.
+    Isso mudou muita coisa na minha vida.
+  </p>
+  <cite>Paciente M. — 28 anos</cite>
+</blockquote>
 
 <section class="contact">
   <div class="container">
