--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     relacionando tudo à minha história desde a infância
     até o momento atual, respeitando minhas particularidades.
   </p>
-  <cite>Paciente J. — 33 anos</cite>
+  <footer>Paciente J. — 33 anos</footer>
 </blockquote>
   <blockquote>
   <p>
@@ -110,7 +110,7 @@
     Ainda estou em processo, mas hoje me escuto mais e me cobro menos.
     Isso mudou muita coisa na minha vida.
   </p>
-  <cite>Paciente M. — 28 anos</cite>
+  <footer>Paciente M. — 28 anos</footer>
 </blockquote>
 
 <section class="contact">
