--- a/index.html
+++ b/index.html
@@ -93,24 +93,24 @@
 </blockquote>
   <blockquote>
   <p>
-    Sempre tive muita dificuldade de falar o que sinto.
+    Sempre tive muita dificuldade de falar o que sinto.<br><br>
     Através do acolhimento de uma escuta sem julgamentos,
-    consegui construir um vínculo de confiança com a Amanda.
+    consegui construir um vínculo de confiança com a Amanda.<br><br>
     A partir disso, passei a expressar livremente situações do meu cotidiano,
     meus pensamentos sobre mim e o que sinto,
-    relacionando tudo à minha história desde a infância
+    relacionando tudo à minha história desde a infância<br><br>
     até o momento atual, respeitando minhas particularidades.
   </p>
-  <footer>Paciente J. — 33 anos</footer>
+  <footer>— Paciente J., 33 anos</footer>
 </blockquote>
   <blockquote>
   <p>
-    Cheguei na terapia cansada de tanto repetir os mesmos problemas.
+    Cheguei na terapia cansada de tanto repetir os mesmos problemas.<br><br>
     Com o tempo, fui entendendo de onde vinha tanta confusão dentro de mim.
-    Ainda estou em processo, mas hoje me escuto mais e me cobro menos.
+    Ainda estou em processo, mas hoje me escuto mais e me cobro menos.<br><br>
     Isso mudou muita coisa na minha vida.
   </p>
-  <footer>Paciente M. — 28 anos</footer>
+  <footer>— Paciente M., 28 anos</footer>
 </blockquote>
 
 <section class="contact">
