--- a/index.html
+++ b/index.html
@@ -61,56 +61,57 @@
     </ul>
   </div>
 </section>
-<section class="testimonial">
+<section class="relatos">
   <h2>Relatos de pacientes</h2>
 
-  <blockquote>
+  <div class="relato-card">
     <p>
-      “Oi, Amanda.<br><br>
+      Oi, Amanda.<br><br>
       Sou imensamente grata por ter conhecido você.
       A terapia me ajudou a enxergar que o autoconhecimento dói,
       mas ele também cura, é libertador e é bonito.<br><br>
       As questões que eu tinha ontem comigo já não são mais as mesmas.
-      Consegui desbloquear muitas ‘gavetas’, me senti ouvida,
+      Consegui desbloquear muitas “gavetas”, me senti ouvida,
       acolhida e não julgada.<br><br>
       Obrigada por cada sessão e por me ajudar
-      no momento mais difícil que passei.”
+      no momento mais difícil que passei.
     </p>
+    <footer>Paciente I., 37 anos</footer>
+  </div>
 
-    <footer>
-      — Paciente I., 37 anos
-    </footer>
-  </blockquote>
+  <div class="relato-card">
+    <p>
+      Comecei a terapia muito imatura, com feridas abertas e achando
+      que já sabia o motivo de tudo.<br><br>
+      Com o tempo, fui amadurecendo e me desconstruindo.<br><br>
+      Hoje vejo as coisas com mais clareza e sigo em construção.<br><br>
+      Obrigada, Amanda, por segurar minha mão nessa caminhada.
+    </p>
+    <footer>Paciente M., 44 anos</footer>
+  </div>
+
+  <div class="relato-card">
+    <p>
+      Sempre tive muita dificuldade de falar o que sinto.
+      Através do acolhimento de uma escuta sem julgamentos,
+      consegui construir um vínculo de confiança com a Amanda.<br><br>
+      A partir disso, passei a expressar livremente situações do meu cotidiano,
+      meus pensamentos sobre mim e o que sinto, relacionando tudo à minha história
+      desde a infância até o momento atual, respeitando minhas particularidades.
+    </p>
+    <footer>Paciente J., 33 anos</footer>
+  </div>
+
 </section>
- <blockquote>
-  <p>
-    “Comecei a terapia muito imatura, com feridas abertas e achando que já sabia o motivo de tudo.<br><br>
-    Com o tempo, fui amadurecendo e me desconstruindo.<br><br>
-    Hoje vejo as coisas com mais clareza e sigo em construção.<br><br>
-    Obrigada, Amanda, por segurar minha mão nessa caminhada.”
-  </p>
-  <footer>— Paciente M., 44 anos</footer>
-</blockquote>
-  <blockquote>
-  <p>
-    Sempre tive muita dificuldade de falar o que sinto.<br><br>
-    Através do acolhimento de uma escuta sem julgamentos,
-    consegui construir um vínculo de confiança com a Amanda.<br><br>
-    A partir disso, passei a expressar livremente situações do meu cotidiano,
-    meus pensamentos sobre mim e o que sinto,
-    relacionando tudo à minha história desde a infância<br><br>
-    até o momento atual, respeitando minhas particularidades.
-  </p>
-  <footer>— Paciente J., 33 anos</footer>
-</blockquote>
-  <blockquote>
+<div class="relato-card">
   <p>
     Cheguei na terapia cansada de tanto repetir os mesmos problemas.<br><br>
-    Com o tempo, fui entendendo de onde vinha tanta confusão dentro de mim.
+    Com o tempo, fui entendendo de onde vinha tanta confusão dentro de mim.<br><br>
     Ainda estou em processo, mas hoje me escuto mais e me cobro menos.<br><br>
     Isso mudou muita coisa na minha vida.
   </p>
-  <footer>— Paciente M., 28 anos</footer>
+  <footer>Paciente M., 28 anos</footer>
+</div>
 </blockquote>
 
 <section class="contact">
